# director-ai

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  (+3 more)
backend/: .env.example  .gitkeep  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: health.py  novels.py  projects.py
backend/app/core/: config.py  constants.py  database.py  migrate.py
backend/app/models/: __init__.py  asset.py  base.py  novel.py  project.py
backend/app/novel/: graph.py  prompts.py  utils.py
backend/app/pipeline/: graph.py
backend/app/providers/: __init__.py  base.py  exceptions.py  registry.py
backend/app/schemas/: novel.py  project.py
backend/app/services/: asset_service.py  ffmpeg_service.py  generation_service.py  image_service.py  novel_chat_service.py  novel_generation_service.py  novel_memory_service.py  novel_plan_service.py  novel_service.py  novel_write_service.py  project_service.py  script_service.py  tts_service.py
backend/tests/: conftest.py  test_agnes_parse.py  test_api_projects.py  test_constants.py  test_e2e.py  test_ffmpeg_service.py  test_generation_service.py  test_health.py  test_image_service.py  test_json_parse.py  test_media_download.py  test_media_input.py  test_migrate.py  test_novel_api.py  test_novel_memory.py  test_novel_plan.py  test_novel_providers.py  test_novel_utils.py  test_providers_agnes.py  test_providers_agnes_video.py  test_registry.py  test_script_service.py  test_tts_service.py
(+48 files in other folders)
