# @author zhangzhihao
[project]
name = "director-ai-backend"
version = "0.1.0"
description = "director-ai 后端 API 与 Pipeline 编排"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "celery>=5.4.0",
    "redis>=5.2.0",
    "langgraph>=0.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "edge-tts>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: 端到端冒烟测试，需真实 Agnes API Key，CI 默认跳过",
]
